app.json added for Heroku

--- a/.env.sample
+++ b/.env.sample
@@ -1,13 +1,14 @@
 REDDIT_SUBREDDIT='foobar'
 
+REDDIT_BOT_MAINTAINER='your-username-here'
+
 REDDIT_USERNAME='phc-bot'
 REDDIT_PASSWORD='********'
 
 REDDIT_CLIENT_ID='********'
 REDDIT_CLIENT_SECRET='********'
 
-#CSE_API_CX='********'
-#CSE_API_KEY='********'
-
-# Optional, if you want to use something other than Sqlite for the database
+# Optional, if you want to use something other than SQLite for the database
 #DATABASE_URL=
+
+#DEBUG=0
