--- a/.env.sample
+++ b/.env.sample
@@ -1,12 +1,12 @@
-REDDIT_SUBREDDIT='foobar'
+REDDIT_SUBREDDIT=foobar
 
-REDDIT_BOT_MAINTAINER='your-username-here'
+REDDIT_BOT_MAINTAINER=your-username-here
 
-REDDIT_USERNAME='phc-bot'
-REDDIT_PASSWORD='********'
+REDDIT_USERNAME=phc-bot
+REDDIT_PASSWORD=********
 
-REDDIT_CLIENT_ID='********'
-REDDIT_CLIENT_SECRET='********'
+REDDIT_CLIENT_ID=********
+REDDIT_CLIENT_SECRET=********
 
 # Optional, if you want to use something other than SQLite for the database
 #DATABASE_URL=
