--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-cssselect==1.1.0
-Flask==1.1.2
-google==2.0.3
-gunicorn==20.0.4
-lxml==4.6.5
+cssselect~=1.1.0
+Flask~=1.1.2
+google~=2.0.3
+gunicorn~=20.0.4
+lxml~=4.6.5
 peewee~=3.13.3
-praw==7.0.0
-psycopg2==2.8.5
-pytesseract==0.3.4
+praw~=7.0.0
+psycopg2~=2.8.5
+pytesseract~=0.3.4
 python-dotenv~=0.13.0
-python-magic==0.4.15
-requests==2.23.0
-urllib3==1.26.5
+python-magic~=0.4.15
+requests~=2.25.0
+urllib3~=1.26.5
