--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,29 @@
-cssselect~=1.1.0
-Flask~=2.1.2
-google~=2.0.3
-gunicorn~=20.0.4
-lxml~=4.6.5
-peewee~=3.13.3
-praw~=7.6.0
-psycopg2~=2.8.5
-pytesseract~=0.3.4
-python-dotenv~=0.13.0
-python-magic~=0.4.15
-requests~=2.25.0
-urllib3~=1.26.5
+beautifulsoup4==4.11.1
+certifi==2022.6.15
+chardet==4.0.0
+click==8.1.3
+cssselect==1.1.0
+Flask==2.1.2
+google==2.0.3
+gunicorn==20.0.4
+idna==2.10
+itsdangerous==2.1.2
+Jinja2==3.1.2
+lxml==4.6.5
+MarkupSafe==2.1.1
+packaging==21.3
+peewee==3.13.3
+Pillow==9.1.1
+praw==7.6.0
+prawcore==2.3.0
+psycopg2==2.8.6
+pyparsing==3.0.9
+pytesseract==0.3.9
+python-dotenv==0.13.0
+python-magic==0.4.27
+requests==2.25.1
+soupsieve==2.3.2.post1
+update-checker==0.18.0
+urllib3==1.26.9
+websocket-client==1.3.3
+Werkzeug==2.1.2
