--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
+attrs==22.1.0
 beautifulsoup4==4.11.1
 certifi==2022.6.15
 chardet==4.0.0
 click==8.1.3
+coverage==6.4.4
 cssselect==1.1.0
 Flask==2.1.2
 google==2.0.3
 gunicorn==20.0.4
 idna==2.10
+importlib-metadata==4.12.0
+iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 lxml==4.6.5
@@ -14,16 +18,25 @@ MarkupSafe==2.1.1
 packaging==21.3
 peewee==3.13.3
 Pillow==9.1.1
+pluggy==1.0.0
 praw==7.6.0
 prawcore==2.3.0
 psycopg2==2.8.6
+py==1.11.0
 pyparsing==3.0.9
 pytesseract==0.3.9
+pytest==7.1.2
+pytest-cov==3.0.0
 python-dotenv==0.13.0
 python-magic==0.4.27
+PyYAML==6.0
 requests==2.25.1
+requests-mock==1.10.0
+six==1.16.0
 soupsieve==2.3.2.post1
+tomli==2.0.1
 update-checker==0.18.0
 urllib3==1.26.9
 websocket-client==1.3.3
 Werkzeug==2.1.2
+zipp==3.8.1
